--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -36,10 +36,30 @@ const inp = document.querySelector('.search');
 const suggestions = document.querySelector('.suggestions');
 
 inp.addEventListener('change', displayMatches);
+inp.addEventListener('keyup', displayMatches);
 // inp.addEventListener('change', onChange);
 
 function displayMatches() {
-  console.log(this.value);
+  const matchArr = findMatch(this.value, cities);
+
+  const html = matchArr.map(place => {
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+    const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+    const pop = numberWithCommas(place.population);
+
+    function numberWithCommas(x) {
+      return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+    }
+
+    return `<li>
+    <span class="name">${cityName}, ${stateName}</span>
+    <span class="population">${pop}</span>
+    </li>
+    `;
+  }).join('');
+
+  suggestions.innerHTML = html;
 }
 
 </script>
